WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278324
[ iOS ] editing/selection/ios/look-up-selected-text.html is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=278324
Summary
[ iOS ] editing/selection/ios/look-up-selected-text.html is a constant timeout
Dawn Morningstar
Reported
2024-08-19 10:49:18 PDT
editing/selection/ios/look-up-selected-text.html [ Timeout ] is a constant timeout on iOS iPhone but passes on iPad, this started at
282379@main
though I'm not sure if that commit actually modifies anything this test uses. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=editing%2Fselection%2Fios%2Flook-up-selected-text.html
DIFF: --- /Volumes/Data/worker/Apple-iOS-17-Simulator-Release-WK2-Tests/build/layout-test-results/editing/selection/ios/look-up-selected-text-expected.txt +++ /Volumes/Data/worker/Apple-iOS-17-Simulator-Release-WK2-Tests/build/layout-test-results/editing/selection/ios/look-up-selected-text-actual.txt @@ -1,10 +1,8 @@ +FAIL: Timed out waiting for notifyDone to be called + Verifies that tapping 'Look Up' in the edit menu does not cause a crash or hang. To manually run the test, select 'Apple' below and select 'Look Up' in the edit menu. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS Tapped 'Look Up' -PASS successfullyParsed is true - -TEST COMPLETE Apple Diff-url:
https://build.webkit.org/results/Apple-iOS-17-Simulator-Release-WK2-Tests/282411@main%20(4895)/editing/selection/ios/look-up-selected-text-diff.txt
Test-run:
https://build.webkit.org/results/Apple-iOS-17-Simulator-Release-WK2-Tests/282411@main%20(4895)/results.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-19 10:51:52 PDT
<
rdar://problem/134271844
>
Dawn Morningstar
Comment 2
2024-08-19 12:22:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32407
EWS
Comment 3
2024-08-19 12:24:15 PDT
Test gardening commit
282448@main
(c34ae367467d): <
https://commits.webkit.org/282448@main
> Reviewed commits have been landed. Closing PR #32407 and removing active labels.
Tim Horton
Comment 4
2024-08-28 23:50:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32880
EWS
Comment 5
2024-08-29 09:28:37 PDT
Committed
282913@main
(0587c4d7e320): <
https://commits.webkit.org/282913@main
> Reviewed commits have been landed. Closing PR #32880 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug