[ iOS ] editing/selection/ios/look-up-selected-text.html is a constant timeout https://bugs.webkit.org/show_bug.cgi?id=278324 rdar://134271844

Reviewed by Wenson Hsieh.

Shift STTF generation a little further down the callout bar (which we want
to do anyway, but also happens to fix this test).

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView buildMenuForWebViewWithBuilder:]):

* LayoutTests/platform/ios/TestExpectations:

Canonical link: https://commits.webkit.org/282913@main